--- a/notebooks/pinecone.ipynb
+++ b/notebooks/pinecone.ipynb
@@ -46,9 +46,16 @@
       "outputs": [],
       "source": [
         "from pinecone import Pinecone\n",
+        "from dotenv import load_dotenv\n",
+        "import os\n",
         "\n",
-        "pc = Pinecone(api_key=\"51bd3ca8-ae20-4999-bacc-7fa2ce57ff4f\")\n",
-        "index = pc.Index(\"chatindex\")"
+        "load_dotenv(override=True)\n",
+        "\n",
+        "PINECONE_API_KEY = os.getenv(\"pinecone_api_key\")\n",
+        "PINECONE_INDEX = os.getenv(\"pinecone_index\")\n",
+        "\n",
+        "pc = Pinecone(api_key=PINECONE_API_KEY)\n",
+        "index = pc.Index(PINECONE_INDEX)"
       ]
     },
     {
